--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ click==8.1.3
 dataclasses-json==0.5.7
 diskcache==5.6.1
 dnspython==2.3.0
-Flask==2.3.2
+Flask
 Flask-JWT-Extended==4.4.4
 Flask-PyMongo==2.3.0
 frozenlist==1.3.3
@@ -19,7 +19,6 @@ idna==3.4
 importlib-metadata==6.6.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
-langchain==0.0.172
 MarkupSafe==2.1.2
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
@@ -41,7 +40,6 @@ python-dotenv==1.0.0
 PyYAML==6.0
 regex==2023.5.5
 requests==2.30.0
-SQLAlchemy==2.0.13
 tenacity==8.2.2
 tiktoken==0.4.0
 tqdm==4.65.0
