--- a/requirements.txt
+++ b/requirements.txt
@@ -6,18 +6,26 @@ blinker==1.6.2
 certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
+colorama==0.4.6
+cors==1.0.1
 dataclasses-json==0.5.7
 diskcache==5.6.1
 dnspython==2.3.0
-Flask
+filelock==3.12.0
+Flask==2.3.2
+Flask-Cors==3.0.10
 Flask-JWT-Extended==4.4.4
 Flask-PyMongo==2.3.0
 frozenlist==1.3.3
+future==0.18.3
+gevent==22.10.2
 greenlet==2.0.2
+gunicorn==20.1.0
 idna==3.4
 importlib-metadata==6.6.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+langchain==0.0.172
 MarkupSafe==2.1.2
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
@@ -33,12 +41,19 @@ parsimonious==0.10.0
 platformdirs==3.5.1
 pydantic==1.10.7
 pygtrie==2.5.0
+PyJWT==2.7.0
 pymongo==4.3.3
+PySocks==1.7.1
+python-dotenv==1.0.0
 PyYAML==6.0
 regex==2023.5.5
 requests==2.30.0
+requests-file==1.5.1
+six==1.16.0
+SQLAlchemy==2.0.13
 tenacity==8.2.2
 tiktoken==0.4.0
+tldextract==3.4.4
 tqdm==4.65.0
 typing-inspect==0.8.0
 typing_extensions==4.5.0
@@ -46,3 +61,5 @@ urllib3==2.0.2
 Werkzeug==2.3.4
 yarl==1.9.2
 zipp==3.15.0
+zope.event==4.6
+zope.interface==6.0
